syntax = "proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "DeviceConnector.Protos";

package device;

service DeviceConnector{
	rpc GetDeviceSerial (GetDeviceSerialRequest) returns (GetDeviceSerialDeviceResponse);
	rpc Connect (ConnectRequest) returns (ConnectResponse);
	rpc Disconnect (google.protobuf.Empty) returns (DisconnectResponse);
	rpc ClearAdmin (google.protobuf.Empty) returns (ClearAdminResponse);
	rpc SyncDeviceTime (google.protobuf.Empty) returns (SyncDeviceTimeResponse);
}

message GetDeviceSerialRequest {
	int32 deviceNumber = 1;
}

message GetDeviceSerialDeviceResponse {
	string serialNumber = 1;
}

message ConnectRequest {
	string ipAddress = 1;
	int32 port = 2;
}

message ConnectResponse {
	bool success = 1;
	string message = 2;
}

message DisconnectResponse {
	bool success = 1;
	string message = 2;
}

message ClearAdminResponse {
	bool success = 1;
	string message = 2;
}

message SyncDeviceTimeResponse {
	bool success = 1;
	string message = 2;
}