syntax ="proto3";

import "google/protobuf/empty.proto";

option csharp_namespace = "DeviceConnector.Protos";

package employee;

service EmployeeService {
  rpc UploadEmployeeData (UploadEmployeeDataRequest) returns (UploadEmployeeDataResponse);
  rpc GetEmployeeData (GetEmployeeDataRequest) returns (GetEmployeeDataResponse);
  rpc GetAllEmployees (google.protobuf.Empty) returns (GetAllEmployeesResponse);
}

message employee {
	int32 employeeId = 1;
	string name = 2;
	string password =3;
	int32 privilege = 4; // 0: normal, 1: admin, 2: superadmin
	bool enable = 5; // true: enabled, false: disabled
}

message UploadEmployeeDataRequest {
	employee employee = 1;
}

message UploadEmployeeDataResponse {
	bool success = 1;
	string message = 2;
}

message GetEmployeeDataRequest {
	int32 employeeId = 1;
}

message GetEmployeeDataResponse {
	employee employee = 1; 
	string message = 2; 
}

message GetAllEmployeesResponse {
	repeated employee employees = 1;
	string message = 2; 
}